--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -35,7 +35,7 @@
             {
                 <div class="station">
                     <p><img src="https://cdn.pixabay.com/photo/2013/07/13/13/16/bus-lane-160716_960_720.png"
-                            width="40" height="40"></img> <strong>Line: </strong>@bus.LineId</p>
+                            width="40" height="40"><strong>Line: </strong>@bus.LineId</p>
                     <p><strong>Arrives in: </strong> @bus.TimeToStation seconds</p>
                 </div>
             }
